name:          ogz-gen
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Benjamin Summers
maintainer:    ben@benjaminsummers.net
category:      Graphics
build-type:    Simple
cabal-version: >=1.10

executable ogz-gen
  main-is:          Main.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  build-depends: base >=4.7 && <4.8, bytestring, text, binary, zlib
               , base-unicode-symbols, classy-prelude, data-binary-ieee754
               , QuickCheck, derive, vector, random, repa, hsnoise, containers
